Working standalone buildout.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,3 +3,12 @@ extends =
     https://raw.github.com/ploneintranet/ploneintranet.suite/master/buildout.cfg
 
 package-name = ploneintranet.async
+
+extensions = mr.developer
+auto-checkout =
+    collective.celery
+sources-dir = source-eggs
+
+
+[sources]
+collective.celery = git git@github.com:collective/collective.celery
