Correctly depending from collective.celery

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,11 @@
 [buildout]
 extends =
     https://raw.github.com/ploneintranet/ploneintranet.suite/master/buildout.cfg
-
+parts +=
+    zeo-server
+eggs +=
+    SQLAlchemy
+    celery[sqlalchemy]
 package-name = ploneintranet.async
 
 extensions = mr.developer
@@ -11,4 +15,29 @@ sources-dir = source-eggs
 
 
 [sources]
-collective.celery = git git@github.com:collective/collective.celery
+collective.celery = git git@github.com:collective/collective.celery branch=ploneintranet-async-improvements
+
+
+[zeo-server]
+recipe = plone.recipe.zeoserver
+zeo-address = 8100
+
+
+[instance]
+environment-vars +=
+#    CELERY_ALWAYS_EAGER True
+    CELERY_IMPORTS ('ploneintranet.async.demo.tasks',)
+    BROKER_URL sqla+sqlite:///${buildout:directory}/celerydb.sqlite?timeout=30
+    CELERY_RESULT_BACKEND db+sqlite:///${buildout:directory}/celeryresults.sqlite?timeout=30
+zeo-client = on
+zeo-address = ${zeo-server:zeo-address}
+shared-blob = on
+
+
+[scripts]
+eggs = ${instance:eggs}
+
+
+[test]
+eggs +=
+    collective.celery[test]
