--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,7 @@ extends =
     https://raw.github.com/ploneintranet/ploneintranet.suite/master/buildout.cfg
 parts +=
     zeo-server
+    scripts
 eggs +=
     SQLAlchemy
     celery[sqlalchemy]
