buildout for testing

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,10 +26,12 @@ zeo-address = 8100
 
 [instance]
 environment-vars +=
-#    CELERY_ALWAYS_EAGER True
+    CELERY_ALWAYS_EAGER True
     CELERY_IMPORTS ('ploneintranet.async.demo.tasks',)
-    BROKER_URL sqla+sqlite:///${buildout:directory}/celerydb.sqlite?timeout=30
-    CELERY_RESULT_BACKEND db+sqlite:///${buildout:directory}/celeryresults.sqlite?timeout=30
+#    BROKER_URL sqla+sqlite:///${buildout:directory}/celerydb.sqlite?timeout=30
+#    CELERY_RESULT_BACKEND db+sqlite:///${buildout:directory}/celeryresults.sqlite?timeout=30
+    BROKER_URL sqla+sqlite://
+    CELERY_RESULT_BACKEND db+sqlite://
 zeo-client = on
 zeo-address = ${zeo-server:zeo-address}
 shared-blob = on
@@ -41,4 +43,5 @@ eggs = ${instance:eggs}
 
 [test]
 eggs +=
+    SQLAlchemy
     collective.celery[test]
